--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,15 @@ table {
     width: 800px;
     border-collapse:  collapse; /* セルの線を重ねる */
 }
+
+label {
+    font-size: medium;
+}
+
+select {
+    font-size: medium;
+}
+
+input {
+    font-size: medium;
+}
