--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,16 @@ body {
     margin-right: 10px
 }
 
+.nomal-button:active{
+    border-style: solid;
+    border-width: 1px;
+    padding: 5px 12px 5px 12px;
+    box-shadow: none;
+    position: relative;
+    margin-right: 10px
+}
+
+
 th {
     background-color: blue;
     color: white;
