--- a/dialog/xxxDialog.css
+++ b/dialog/xxxDialog.css
@@ -26,6 +26,16 @@
     margin-right: 10px
 }
 
+.xxxDialogButton:active {
+    border-style: solid;
+    border-width: 1px;
+    padding: 5px 12px 5px 12px;
+    box-shadow: none;
+    position: relative;
+    margin-right: 10px
+}
+
+
 .xxxDialogFrame{
     padding: 12px 12px 12px 12px;
 }
